# PNPD_unrolling

./: .gitattributes  .pre-commit-config.yaml  README.md  genetic_train.py  math_extras.py  plot_utilities.py  pyproject.toml  solvers.py  test.py  test_math_extras.py  train.py  utilities.py
.github/workflows/: python_format.yml  python_lint.yml  python_test.yml
datasets/: BSDS500.py  SynteticDataset.py
models/: ConvNet.py  PNPD_NN_step.py
results/: PNPD_unrolling_SSIM.pth  PNPD_unrolling_SSIM_info.txt  PNPD_unrolling_SSIM_results.json
