[project]
name = "pnpd-unrolling"
version = "0.1.0"
description = "Preconditioned Nested Primal Dual unrolling"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pytorch-msssim>=1.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
